--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "summernote-bs4";
+@import "summernote-custom-theme.min";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
