--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -2,14 +2,7 @@
  * Your CSS code for flash notices and alerts
 * ------------------------------------- */
 
-.alert {
-  margin: 0;
-  text-align: center;
-  color: white;
-}
-.alert-info {
-  background: $green;
-}
-.alert-warning {
-  background: $red;
+#notif {
+  background-color: $green;
+  border-radius: 2px;
 }
