--- a/app/views/pages/_expendable_fields.html.erb
+++ b/app/views/pages/_expendable_fields.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :reference, label: 'Référence' %>
   <%= f.input :price, label: 'Tarif' %>
   <%= f.input :description, label: 'Description' %>
-  <%= link_to_remove_association content_tag(:i, "", class: 'fa fa-minus'), f %>
+  <%= link_to_remove_association 'Supprimer ce consommable -', f, class: 'btn-delete' %>
 </div>
