--- a/app/views/dashboard/_dashboard_produts.html.erb
+++ b/app/views/dashboard/_dashboard_produts.html.erb
@@ -35,80 +35,12 @@
         <%= f.input :price, label: false %>€ HT /
         <%= f.input :pricing, collection: ['jour', 'mois', 'an'], label: false %>
         <%= f.input :deposit, label: false %>€
-        <%= f.button :submit, class: 'loxam-btn', value: 'Sauvegarder' %>
-        <%= link_to 'Détails/Modifier', edit_product_path(product), class: 'loxam-btn' %>
+        <%= f.button :submit, class: 'btn-save', value: 'Sauvegarder' %>
+        <%= link_to 'Détails/Modifier', edit_product_path(product), class: 'btn-edit' %>
         <%= link_to product_path(product), remote: true, :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel Jano?"} do %>
           <i class="fa fa-trash"></i>
           <% end %>
       <% end %>
     </div>
   <% end %>
-  <!--
-  <div class="row row-products-dashboard">
-    <h3><%= @current_category %></h3>
-    <% @products.each do |product| %>
-      <div class="col-xs-12 col-sm-6 col-md-3 col-item-card" id="col-product-card-<%= product.id %>">
-        <div class="item-card white-box item-card-dashboard product-card-dashboard">
-          <div class="item-card-image">
-            <% if product.photo? %>
-              <div style="background-image: url('<%= cl_image_path product.photo %>'); ">
-              </div>
-            <% else %>
-              <div style="background-image: url('https://loremflickr.com/cache/resized/4493_37892718232_c54293c193_320_240_nofilter.jpg'); ">
-              </div>
-            <% end %>
-          </div>
-          <%= link_to product_path(product), remote: true, :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel Jano?"} do %>
-          <i class="fa fa-trash"></i>
-          <% end %>
-          <%= simple_form_for product, remote: true do |f| %>
-            <div class="card-infos">
-              <h3><%= f.input :name, label: false %></h3>
-            </div>
-            <ul class="card-infos-list">
-              <li><strong>Référence:</strong> <%= f.input :reference, label: false %></li>
-              <li><strong>Catégorie:</strong> <%= f.association :category, label: false %></li>
-              <li><strong>Prix:</strong> <%= f.input :price, label: false %>€/<%= f.input :pricing, collection: ['jour', 'mois', 'an'], label: false %></li>
-              <% if product.technical_sheet? %>
-                <li><strong>Garantie:</strong> <%= f.input :deposit, label: false %></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">Deposit</strong></li>
-              <% end %>
-              <% if product.video? %>
-                <li><strong>Video</strong></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">video</strong></li>
-              <% end %>
-              <% if product.loxam_link? %>
-                <li><strong>Loxam lien</strong></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">loxam_link</strong></li>
-              <% end %>
-              <% if product.technical_sheet? %>
-                <li><strong>technical_sheet</strong></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">Fiche technique</strong></li>
-              <% end %>
-              <% if product.features? %>
-                <li><strong>Caractéristiques</strong></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">features</strong></li>
-              <% end %>
-              <% if product.description? %>
-                <li><strong>Description</strong></li>
-              <% else %>
-                <li><strong style=" text-decoration: line-through;">Description</strong></li>
-              <% end %>
-            </ul>
-            <div class="item-card-dashboard-btn">
-              <%= f.button :submit, class: 'loxam-btn', value: 'Sauvegarder' %>
-              <%= link_to 'Détails/Modifier', product_path(product), class: 'loxam-btn' %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-
-    <% end %>
-  -->
-  </div>
 </div>
