--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,45 +1,53 @@
 <%= simple_form_for @product, remote: true do |f| %>
   <%= f.error_notification %>
-  <div class="col-xs-12 col-sm-6">
+  <div class="col-xs-6 col-sm-4">
     <%= f.input :name, label: 'Nom' %>
-    <span class="error" id="name-error"></span>
-    <%= f.input :reference %>
-    <span class="error" id="reference-error"></span>
-    <%= f.association :category, label: 'Category' %>
-    <span class="error" id="category_id-error"></span>
-    <%= f.input :price, label: 'Tarif' %>
-    <span class="error" id="price-error"></span>
-    <%= f.input :deposit %>
   </div>
-  <div class="col-xs-12 col-sm-6">
+  <div class="col-xs-6 col-sm-4">
+    <%= f.input :reference, label: 'Référence' %>
+  </div>
+  <div class="col-xs-6 col-sm-4">
+    <%= f.association :category, label: 'Categorie' %>
+  </div>
+  <div class="col-xs-6 col-sm-4">
+    <%= f.input :price, label: 'Tarif' %>
+  </div>
+  <div class="col-xs-6 col-sm-4">
+    <%= f.input :pricing, label: 'Faturation', collection: [ 'jour', 'mois', 'an' ] %>
+  </div>
+  <div class="col-xs-6 col-sm-4">
+    <%= f.input :deposit, label: 'Garantie' %>
+  </div>
+
+  <div class="col-xs-6 col-sm-3">
     <%= f.input :features, label: 'Caractéristiques' %>
     <%= f.input :features_cache, as: :hidden %>
-    <%= f.input :technical_sheet, label: 'Fiche technique' %>
+  </div>
+  <div class="col-xs-6 col-sm-3">
     <%= f.input :technical_sheet_cache, as: :hidden %>
-    <%= f.input :description, as: :summernote, label: 'Description' %>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <%= f.input :photo %>
-        <%= f.input :photo_cache, as: :hidden %>
-        <span class="error" id="photo-error"></span>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <%= f.input :video %>
-      </div>
-    </div>
-    <%= f.input :loxam_link %>
-    <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
+    <%= f.input :technical_sheet, label: 'Fiche technique' %>
+  </div>
+  <div class="col-xs-6 col-sm-3">
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
+  </div>
+  <div class="col-xs-6 col-sm-3">
+    <%= f.input :video %>
+  </div>
+  <div class="col-xs-12">
+    <%= f.input :description, as: :summernote, label: 'Déscription' %>
   </div>
 
   <!-- Expendables -->
-  <div id="expendables">
+  <div class="col-xs-12" id="expendables">
     <h4>Ajouter des consommables</h4>
     <%= f.simple_fields_for :expendables do |expendable| %>
       <%= render 'expendable_fields', :f => expendable %>
     <% end %>
     <div class="links">
-      <%= link_to_add_association 'Ajouter un consommable', f, :expendables %>
+      <%= link_to_add_association 'Ajouter un autre consommable +', f, :expendables, class: 'btn-edit' %>
     </div>
   </div>
+  <%= f.button :submit, class: 'btn-save' %>
 <% end %>
 
