--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -48,6 +48,6 @@
       <%= link_to_add_association 'Ajouter un autre consommable +', f, :expendables, class: 'btn-edit' %>
     </div>
   </div>
-  <%= f.button :submit, class: 'btn-save' %>
+  <%= f.button :submit, value: 'Créer matériel', class: 'btn-save' %>
 <% end %>
 
