--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -6,3 +6,25 @@
   background-color: $green;
   border-radius: 2px;
 }
+
+#authenticate-message .alert {
+  position: fixed;
+  width: 100%;
+  z-index: 9;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $light-gray;
+  color: #e10c22;
+  padding: 40px;
+  margin-bottom: 0;
+  text-align: center;
+  border: 20px solid #fff;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  .close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+  }
+}
