--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
     <% unless params[:name] && current_page?(affiliate_path) || current_page?(vente_path) %>
       <%= render 'shared/categories' %>
     <% end %>
+    <div id="authenticate-message"></div>
     <a href="#"><i id="scrollToTop" class="fa fa-arrow-circle-up"></i></a>
       <%= yield %>
     <%= javascript_pack_tag 'application' %>
     <%= render 'shared/footer' %>
   </body>
 </html>
+
