--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -25,3 +25,7 @@ form {
 .thanks-message-container, .send-new-message {
   text-align: center;
 }
+
+#new_user .form-actions {
+  margin: 15px auto;
+}
