--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h2>Créer un compte</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
@@ -11,7 +11,7 @@
         <%= f.input :avatar_cache, as: :hidden  %>
         <br>
       <%= f.input :email, required: true, autofocus: true %>
-      <%= f.input :password, label: 'Créer un mot de pass', required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+      <%= f.input :password, label: 'Créer un mot de pass', required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
       <%= f.input :password_confirmation, label: 'Confirmez votre nouveau mot de pass', required: true %>
     </div>
 
