--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,19 +4,13 @@
       <%= render 'messages/form' %>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <p>
-        <strong>LOXAM Bastia
-        <br>
-        SAS REPAR&LOC</strong>
-        <br>
-        Z.I FURIANI
-        <br>
-        CHEMIN DE PASTORECCIA
-        <br>
-        <a href="tel:+33495602364"><i class="fa fa-phone"></i> 04 95 60 23 64</a> FAX: 04 95 60 21 89
-        <a href="mailto:contact@loxambastia.com"><i class="fa fa-envelope"></i> contact@loxambastia.com</a>
-      </p>
-      <p><strong>Ouvert du lundi au vendredi de 7h00 à 12h00 et de 13h00 à 18h00</strong></p>
+      <h4>LOXAM Bastia / SAS REPAR&LOC</h4>
+      <p>Z.I FURIANI</p>
+      <p>CHEMIN DE PASTORECCIA</p>
+      <a href="tel:+33495602364"><i class="fa fa-phone"></i> 04 95 60 23 64</a>
+      <p>FAX: 04 95 60 21 89</p>
+      <a href="mailto:contact@loxambastia.com"><i class="fa fa-envelope"></i> contact@loxambastia.com</a>
+      <p><strong>Ouvert du lundi au vendredi <br>De 7h00 à 12h00 et de 13h00 à 18h00</strong></p>
     </div>
   </div>
 
