--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,5 +5,6 @@
 @import "vente";
 @import "mon_espace";
 @import "affiliate";
+@import "contact";
 @import "product/product_show";
 @import "product/product_edit";
