--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -12,9 +12,8 @@
       <a href="mailto:contact@loxambastia.com"><i class="fa fa-envelope"></i> contact@loxambastia.com</a>
       <p><strong>Ouvert du lundi au vendredi <br>De 7h00 à 12h00 et de 13h00 à 18h00</strong></p>
     </div>
-  </div>
-
-  <div class="white-box">
-
+    <div class="col-xs-12">
+      <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1466.9282785321818!2d9.43899234252736!3d42.66439503293484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d724f03e761651%3A0x7313181e36d7f804!2sLOXAM+Bastia!5e0!3m2!1sen!2sfr!4v1533137474502" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
