--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="row white-box">
+  <div class="row row-contact white-box">
+    <h1>Nous contacter</h1>
     <div class="col-xs-12 col-sm-6">
       <%= render 'messages/form' %>
     </div>
