--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,8 @@
   <!-- Logo -->
   <div class="navbar-left-section">
     <%= link_to root_path, class: "navbar-wagon-brand" do %>
-      <% if image_tag 'logo' %>
-        <%= image_tag 'logo' %>
+      <% if image_tag('logo').present? %>
+        <%= image_tag('logo') %>
       <% else %>
         <%= cl_image_tag 'logo.jpg' %>
       <% end %>
