--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,8 +9,8 @@
       <ul>
         <h4>NOTRE MÉTIER</h4>
         <li><%= link_to 'Garantie dommages', garantie_dommages_path %></li>
-        <li><%= link_to 'Conditions générales de location',conditions_generales_de_location_path %></li>
-        <li><%= link_to 'Conditions générales de vente',conditions_generales_de_vente_path %></li>
+        <li><%= link_to 'Conditions générales de location', root_path %></li>
+        <li><%= link_to 'Conditions générales de vente', root_path %></li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-6">
