--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,7 +26,7 @@
 </div>
 <div class="sub-footer">
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-      <%= cl_image_tag 'logo.jpg' %>
+      <%= image_tag 'logo' %>
   <% end %>
   <p>Copyright <i class="fa fa-copyright"></i> <%= Time.now.year %></p>
 </div>
