--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <div class="navbar-left-section">
     <%= link_to root_path, class: "navbar-wagon-brand" do %>
-      <%= cl_image_tag 'logo.jpg' %>
+      <%= image_tag 'logo' %>
       <a href="tel:+33495602364"><i class="fa fa-phone"></i> 04 95 60 23 64</a>
     <% end %>
   </div>
