--- a/app/assets/stylesheets/pages/_mon_espace.scss
+++ b/app/assets/stylesheets/pages/_mon_espace.scss
@@ -16,3 +16,9 @@
   align-items: center;
   padding: 10px;
 }
+
+@media screen and (max-width: 991px) {
+  .container-mon-espace {
+    margin-top: 140px;
+  }
+}
