--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -56,12 +56,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 350px;
 }
 
 /* Basic navbar item */
 .navbar-wagon-item {
   cursor: pointer;
-  padding: 0 20px;
+  // padding: 0 20px;
 }
 
 /* Navbar link */
