--- a/app/assets/stylesheets/pages/product/_product_show.scss
+++ b/app/assets/stylesheets/pages/product/_product_show.scss
@@ -89,6 +89,13 @@
   }
 }
 
+
+@media screen and (max-width: 991px) {
+  .container-product {
+    margin-top: 140px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .row-presentation-product .col-xs-12:nth-child(2) {
     text-align: center;
