--- a/app/assets/stylesheets/pages/_affiliate.scss
+++ b/app/assets/stylesheets/pages/_affiliate.scss
@@ -68,8 +68,13 @@
     margin-top: 10px;
   }
 }
-
 @media screen and (max-width: 991px) {
+  .wrapper-affiliate {
+    margin-top: 100px;
+  };
+}
+
+@media screen and (max-width: 770px) {
   .wrapper-affiliate {
     margin-top: 100px;
   };
