Modified for deployment!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <div id="authenticate-message"></div>
     <a href="#"><i id="scrollToTop" class="fa fa-arrow-circle-up"></i></a>
       <%= yield %>
-    <%= javascript_pack_tag 'application' %>
+    <%#= javascript_pack_tag 'application' %>
     <%= render 'shared/footer' %>
   </body>
 </html>
