--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,4 +10,4 @@ $gray: #000000;
 $light-gray: #F4F4F4;
 // $loxam-color: rgb(225, 12, 34);
 $font-color: #616668;
-$loxam-color: green;
+$loxam-color: blue;
