--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,6 +8,5 @@ $orange: #E67E22;
 $green: #7adb6d;
 $gray: #000000;
 $light-gray: #F4F4F4;
-// $loxam-color: rgb(225, 12, 34);
+$loxam-color: rgb(225, 12, 34);
 $font-color: #616668;
-$loxam-color: blue;
