--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
       <% @affiliates.each do |affiliate| %>
         <% if affiliate.name.present? && affiliate.logo.present? %>
         <div class="col-xs-12 col-sm-6 col-md-3"><%= link_to affiliate_path(affiliate.name) do %>
-            <%= image_tag(affiliate.logo, :cloud_name => djhma0mde) %>
+            <%= image_tag(affiliate.logo, :cloud_name => "djhma0mde") %>
           <% end %>
         </div>
         <% end %>
