--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,5 +6,7 @@
 @import "mon_espace";
 @import "affiliate";
 @import "contact";
+@import "documentations";
+@import "garantie-dommages";
 @import "product/product_show";
 @import "product/product_edit";
