--- a/app/views/pages/garantie_dommages.html.erb
+++ b/app/views/pages/garantie_dommages.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container garantie-dommages-container white-box">
   <div class="row">
     <div class="col-xs-12 col-sm-6">
       <p><strong>Formule de garantie dommages aux conditions suivantes :</strong></p>
@@ -6,7 +6,7 @@
       <p>8 % pour tous les autres matériels de notre tarif. Le montant s’applique en jours calendaires. Quote-part de 15% restant à la charge du locataire.</p>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <%= cl_image_tag "IMG_7032.jpg", height: '300' %>
+      <%= cl_image_tag "garantie_dommage.jpg" %>
     </div>
   </div>
 </div>
