--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,9 +26,12 @@ html, body {
   border-radius: 3px;
 }
 
+p, h1, h2, h3, h4, h5 {
+  color: $font-color;
+}
+
 p {
   font-weight: lighter;
-  color: $font-color;
 }
 
 .loxam-name {
@@ -39,6 +42,16 @@ p {
   span:last-child {
     color: $font-color;
   }
+}
+
+.title-gray-background {
+  color: #e10c22;
+  background-color: #F4F4F4;
+  font-size: 22px;
+  text-align: center;
+  margin: 0 0 70px 0;
+  padding: 10px;
+  border-radius: 2px;
 }
 
 input:focus,
