--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -9,11 +9,11 @@
 
     <div class="form-inputs">
       <%= f.input :password, label: "Nouveau mot de pass", required: true, autofocus: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-      <%= f.input :password_confirmation, label: "Confirmez votre nouveau mot de pass", required: true %>
+      <%= f.input :password_confirmation, label: "Confirmez votre nouveau mot de passe", required: true %>
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Changer mon mot de pass", class: 'loxam-btn' %>
+      <%= f.button :submit, "Changer mon mot de passe", class: 'loxam-btn' %>
     </div>
   <% end %>
 
