--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,8 +11,8 @@
         <%= f.input :avatar_cache, as: :hidden  %>
         <br>
       <%= f.input :email, required: true, autofocus: true %>
-      <%= f.input :password, label: 'Créer un mot de pass', required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
-      <%= f.input :password_confirmation, label: 'Confirmez votre nouveau mot de pass', required: true %>
+      <%= f.input :password, label: 'Créer un mot de passe', required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, label: 'Confirmez votre nouveau mot de passe', required: true %>
     </div>
 
     <div class="form-actions">
