modifs asked by jeano

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,7 +5,8 @@
       <%= render 'messages/form' %>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <h4>LOXAM Bastia / SAS REPAR&LOC</h4>
+      <h3>LOXAM Bastia</h3>
+      <h5>SAS REPAR&LOC</h5>
       <p>Z.I FURIANI</p>
       <p>CHEMIN DE PASTORECCIA</p>
       <a href="tel:+33495602364"><i class="fa fa-phone"></i> 04 95 60 23 64</a>
