--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,7 @@
       <% end %>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <p><strong><%= number_to_currency(@product.price,:unit => '€', delimiter: " ", precision: 0, format: "%n%u") %> HT / <%= @product.pricing %></strong> soit <%= number_to_currency(@product.price * 1.2,:unit => '€', delimiter: " ", precision: 0, format: "%n%u") %> TTC / <%= @product.pricing %></p>
+      <p><strong><%= number_to_currency(@product.price,:unit => '€', delimiter: " ", precision: 2, format: "%n%u") %> HT / <%= @product.pricing %></strong> soit <%= number_to_currency(@product.price * 1.2,:unit => '€', delimiter: " ", precision: 2, format: "%n%u") %> TTC / <%= @product.pricing %></p>
       <p>Référence: <%= @product.reference %></p>
       <% if @product.description? %>
         <p><%= @product.description.html_safe %></p>
@@ -65,7 +65,7 @@
       <br>
       Horaire de l'agence : ouvert du lundi au vendredi de 7h à 12h et de 13h à 18h.
       <br>
-      Montant dépôt de garantie : <strong><%= number_to_currency(@product.deposit,:unit=>'€', delimiter: " ", precision: 0, format: "%n %u") %></strong>
+      Montant dépôt de garantie : <strong><%= number_to_currency(@product.deposit,:unit=>'€', delimiter: " ", precision: 2, format: "%n %u") %></strong>
       Pour toute location, un dépôt de garantie (uniquement en carte bleue) est demandé en fonction de la classification des matériels.</p>
     </div>
   <!-- </div> -->
@@ -78,7 +78,7 @@
           <ul>
             <% @product.expendables.each do |expendable| %>
             <li>
-              <h4><%= expendable.name %> - <%= expendable.price.round %>€</h4>
+              <h4><%= expendable.name %> - <%= number_to_currency(expendable.price,:unit => '€', delimiter: " ", precision: 2, format: "%n%u") %>€</h4>
               <p><%= expendable.description %></p>
             </li>
             <% end %>
