--- a/app/assets/stylesheets/components/_promo.scss
+++ b/app/assets/stylesheets/components/_promo.scss
@@ -9,6 +9,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
+  text-align: center;
   img {
     max-width: 100%;
   };
