--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <div class="message-form-product-page">
+      <div class="message-form-product-page form-container">
         <h3><%= @product.name %> vous intéresse?</h3>
         <%= simple_form_for @message, remote: true  do |f| %>
         <div class="row">
