--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container categories-page-container">
-  <h1><%= @category.name %></h1>
+  <h1><%= @category.name.upcase %></h1>
   <div class="row">
     <% @products.each do |product| %>
       <div class="col-xs-12 col-sm-6 col-md-3 col-item-card">
