--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row row-contact white-box">
     <h1>Nous contacter</h1>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-6 form-container">
       <%= render 'messages/form' %>
     </div>
     <div class="col-xs-12 col-sm-6">
