--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NTQLK8V');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><% if !current_user.nil? && current_user.admin %>
@@ -8,7 +13,7 @@
           <% end %>
       Loxam Bastia : Location de materiel pour batiment, TP, industrie
     </title>
-    <meta name="description" content="Location et vente de mat&amp;eacute;riel et outillage pour le batiment, les travaux publics et l'industrie">
+    <meta name="description" content="Pour vos travaux, LOXAM-BASTIA propose à la vente ou à la location du matériel et outillage pour le bâtiment, les travaux publics et l'industrie.">
     <meta name="keywords" content="location matériel, materiel travaux, batiment, rennovation, achat materiel corse, location amteriel corse, louer outils, location outil, loxam, loxam corse, loxam bastia, location outil nettoyage, outil beton, outil batiment, outil peinture, outil electrique">
     <%= favicon_link_tag %>
 
@@ -18,6 +23,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTQLK8V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <%= render 'shared/navbar' %>
     <% unless params[:name] && current_page?(affiliate_path) || current_page?(vente_path) %>
       <%= render 'shared/categories' %>
