search bar modifs

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,8 +14,8 @@
     <span class="bar"></span>
     <label id="search-label"><i class="fa fa-search"></i> Rechercher un matériel</label>
     <ul id="search-list">
-      <% if !@products.nil? %>
-        <% @products.each do |product| %>
+      <% if !@all_products.nil? %>
+        <% @all_products.each do |product| %>
           <li class="product-item"><%= link_to product.name, product_path(product) %></li>
         <% end %>
       <% end %>
