--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       Loxam Bastia : Location de materiel pour batiment, TP, industrie
     </title>
     <meta name="description" content="Pour vos travaux, LOXAM BASTIA propose à location du matériel et outillage pour le bâtiment, les travaux publics et l'industrie">
-    <meta name="keywords" content="location matériel, materiel travaux, batiment, rennovation, achat materiel corse, location amteriel corse, louer outils, location outil, loxam, loxam corse, loxam bastia, location outil nettoyage, outil beton, outil batiment, outil peinture, outil electrique">
+    <meta name="keywords" content="Location matériel, materiel travaux, batiment, rennovation, achat materiel corse, location amteriel corse, louer outils, location outil, loxam, loxam corse, loxam bastia, location outil nettoyage, outil beton, outil batiment, outil peinture, outil electrique">
     <%= favicon_link_tag %>
 
     <%= csrf_meta_tags %>
