--- a/app/assets/stylesheets/pages/_mon_espace.scss
+++ b/app/assets/stylesheets/pages/_mon_espace.scss
@@ -33,9 +33,9 @@
 }
 
 @media screen and (max-width: 991px) {
-  .container-mon-espace {
-    margin-top: 140px;
-  };
+  // .container-mon-espace {
+  //   margin-top: 140px;
+  // };
   .container-invoices .row-invoice {
     font-size: 0.7em;
   };
