--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -17,7 +17,7 @@
     </li>
     <li>
       <h5>Assurance</h5>
-      <p>Formule d&#39;assurance «Bris de machine-vol» (<%= link_to 'voir conditions en cliquant ici',root_path, target: '_blank'%>).</p>
+      <p>Formule d&#39;assurance «Bris de machine-vol» (<%= link_to 'voir conditions en cliquant ici', conditions_generales_de_location_path, target: '_blank'%>).</p>
     </li>
   </ul>
 
