--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
       <ul>
         <h4>NOTRE MÉTIER</h4>
         <li><%= link_to 'Garantie dommages', garantie_dommages_path %></li>
-        <li><%= link_to 'Conditions générales de location', root_path %></li>
+        <li><%= link_to 'Conditions générales de location', conditions_generales_de_location_path %></li>
         <li><%= link_to 'Conditions générales de vente', root_path %></li>
       </ul>
     </div>
