--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,9 +1,9 @@
 <p>Bonjour <%= @user.name %>,</p>
 <br>
 <p>A parti du 1er Septembre 2018, votre agence LOXAM BASTIA à fait peau neuve de son site internet : <a href="http://www.loxam-bastia.fr" target="_blank">www.loxam-bastia.com</a></p>
-<p>Cela vous permettra entres autres de vous connecter à votre espace personnel dans lequel vous aurez la possibilité de consulter vos factures.</p>
+<p>Cela vous permettra entre autres de vous connecter à votre espace personnel dans lequel vous aurez la possibilité de consulter vos factures.</p>
 <br>
-<p>Pour y accéder cliquer sur ce lien <a href="http://www.loxam-bastia.fr/users/sign_in" target="_blank">Se connecter</a> et utiliser l’identifiant et le mot de pass suivants :</p>
+<p>Pour y accéder cliquez sur ce lien <a href="http://www.loxam-bastia.fr/users/sign_in" target="_blank">Se connecter</a> et utilisez l’identifiant et le mot de passe suivant:</p>
 
 <p>Identifiant: <%= @user.email %></p>
 <p>Mot de passe: <%= @user.password %></p>
